Kubernetes/day11/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
          labels:
                      app: giropops-senhas
                        name: giropops-senhas
                        spec:
                                  replicas: 2
                                    selector:
                                                matchLabels:
                                                              app: giropops-senhas
                                                                template:
                                                                            metadata:
                                                                                          labels:
                                                                                                          app: giropops-senhas
                                                                                                              spec:
                                                                                                                            containers:
                                                                                                                                          - image: raphaelborges/linuxtips-giropops-senhas:1.3
                                                                                                                                                    name: giropops-senhas
