Kubernetes/day11/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
          labels:
                      app: redis
                        name: redis
                        spec:
                                  replicas: 1
                                    selector:
                                                matchLabels:
                                                              app: redis
                                                                template:
                                                                            metadata:
                                                                                          labels:
                                                                                                          app: redis
                                                                                                              spec:
                                                                                                                            containers:
                                                                                                                                          - image: cgr.dev/chainguard/redis:latest
                                                                                                                                                    name: redis
                                                                                                                                                            ports:
                                                                                                                                                                            - containerPort: 6379
                                                                                                                                                                                      imagePullPolicy: Always
                                                                                                                                                                                              resources:
                                                                                                                                                                                                                limits:
                                                                                                                                                                                                                                    cpu: 100m
                                                                                                                                                                                                                                                memory: 128Mi
                                                                                                                                                                                                                                                          requests:
                                                                                                                                                                                                                                                                              cpu: 100m
                                                                                                                                                                                                                                                                                          memory: 128Mi
