Kubernetes/day11/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
          labels:
                      app: redis
                        name: redis-service
                        spec:
                                  selector:
                                              app: redis
                                                ports:
                                                          - protocol: TCP
                                                                port: 6379
                                                                    targetPort: 6379
                                                                        name: tcp-redis
                                                                          type: ClusterIP
