Kubernetes/day11/ingress-eks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
          name: giropops-senhas-eks-ingress
            annotations:
                        nginx.ingress.kubernetes.io/rewrite-target: /
                        spec:
                                  ingressClassName: nginx
                                    rules:
                                              - host: {DOMAIN_NAME}
                                                    http:
                                                                  paths:
                                                                                - path: /
                                                                                          pathType: Prefix
                                                                                                  backend:
                                                                                                                    service:
                                                                                                                                        name: giropops-senhas
                                                                                                                                                    port:
                                                                                                                                                                          number: 5000
