Kubernetes/day11/ingress-multiplos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
          name: nginx
            annotations:
                        nginx.ingress.kubernetes.io/rewrite-target: /
                        spec:
                                  rules:
                                            - host: giropops.nginx.io
                                                  http:
                                                                paths:
                                                                              - path: /
                                                                                        pathType: Prefix
                                                                                                backend:
                                                                                                                  service:
                                                                                                                                      name: nginx
                                                                                                                                                  port:
                                                                                                                                                                        number: 80
