Kubernetes/day11/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
          name: giropops-senhas-ingress
            annotations:
                        nginx.ingress.kubernetes.io/rewrite-target: /
                        spec:
                                  rules:
                                            - http:
                                                          paths:
                                                                        - path: /
                                                                                  pathType: Prefix
                                                                                          backend:
                                                                                                            service:
                                                                                                                                name: giropops-senhas
                                                                                                                                            port:
                                                                                                                                                                  number: 5000
